<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Deal Browser</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="product_image_content_description">Product Image</string>
    <string name="delivery_method_ship">ship</string>
    <string name="or">or</string>
    <string name="a1">A1</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_list">Add to list</string>
    <string name="reg">Reg:</string>
    <string name="added_to_cart">Added to cart!</string>
    <string name="added_to_list">Added to list!</string>
    <string name="no_network">Failed to load items!</string>


</resources>
