<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deal_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <!--
        <android.support.v7.widget.CardView
            android:id="@+id/deal_list_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">-->

    <LinearLayout
        android:id="@+id/deal_list_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white_color"
        android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/deal_list_item_image_view"
                android:layout_width="143dp"
                android:layout_height="143dp"
                android:contentDescription="@string/product_image_content_description"
                tools:background="@drawable/image_16200413"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deal_list_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="title"
                android:fontFamily="sans-serif-light"
                tools:text="This is heading!"
                android:maxLines="2"
                android:minLines="2"
                android:textColor="@color/gray_color"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_gainsboro"></View>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/deal_list_item_price"
                    tools:text="$20"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:contentDescription="price"
                    android:textColor="@color/gray_color"
                    android:textSize="25sp" />
                <RelativeLayout
                    android:id="@+id/aisle_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    >
                    <TextView
                        android:id="@+id/aisle"
                        tools:text="@string/a1"
                        android:layout_centerInParent="true"
                        android:textColor="@color/actionbar_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="2dp"
                        android:background="@drawable/circle_shape"
                        android:layout_height="wrap_content"></ImageView>
                </RelativeLayout>

                <TextView
                    android:id="@+id/or"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/aisle_layout"
                    android:text="@string/or"
                    android:textColor="@color/grey_gainsboro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"/>
                <TextView
                    android:id="@+id/ship"
                    android:layout_toLeftOf="@id/or"
                    android:layout_centerVertical="true"
                    android:text="@string/delivery_method_ship"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"/>


            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_gainsboro"></View>
    <!--</android.support.v7.widget.CardView>-->
</RelativeLayout>
