<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="65dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <ImageView
        android:id="@+id/deals_detail_picture"
        tools:src="@drawable/image_16200413"
        android:scaleType="fitCenter"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="300dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/details_sale_price"
                tools:text="$8.98"
                android:textSize="35sp"
                android:textColor="@color/actionbar_color"
                android:fontFamily="sans-serif-medium"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp">
                <TextView
                    android:text="@string/reg"
                    android:layout_centerInParent="true"
                    android:textSize="25sp"
                    android:maxLines="1"
                    android:textColor="@color/gray_price"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    >
                    <TextView
                        android:id="@+id/details_price"
                        android:layout_alignParentRight="true"
                        tools:text="$12.98"
                        android:layout_centerInParent="true"
                        android:textSize="25sp"
                        android:maxLines="1"
                        android:textColor="@color/gray_price"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <View
                        android:id="@+id/regular_price_strike"
                        android:layout_centerInParent="true"
                        android:layout_alignParentRight="true"
                        android:background="@color/gray_price"
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"></View>
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
        <TextView
            android:id="@+id/details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            tools:text="Tiered Lace Tank - Lily Star"
            android:textSize="25sp"
            android:maxLines="2"/>
        <TextView
            android:id="@+id/details_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            tools:text="Tiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily StarTiered Lace Tank - Lily Star"
            android:textSize="12sp"
           />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/button_add_to_list"
            android:text="@string/add_to_list"
            android:fontFamily="sans-serif"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:background="@color/grey_gainsboro"
            android:layout_height="60dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_add_to_cart"
            android:text="@string/add_to_cart"
            android:fontFamily="sans-serif"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textColor="@color/white_color"
            android:background="@color/actionbar_color"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>